--- a/style.css
+++ b/style.css
@@ -4,6 +4,27 @@
     margin: 0;
     padding: 0;
   }
+
+  .ml4 {
+    font-family: 'Pacifico', cursive;
+    font-size: 50px;
+    padding: 10px;
+    border-radius: 5px;
+    color: #3b5998;
+    text-align:center;
+    font-weight: 900;
+    font-size: 4.5em;
+  }
+  .ml4 .letters {
+    margin: auto;
+    left: 0;
+    top: 0.3em;
+    right: 0;
+    opacity: 0; 
+  }
+
+
+
   #page {
     margin: 30px auto;
     background: rgba(255, 255, 255, .98);
@@ -14,16 +35,19 @@
     height: 300px;
     width: 40%;
     border-radius: 10px;
-    border-color:#3b5998;
+    border-color: blue;
     overflow: hidden;
   }
   #page ul {
+    font-family: 'Pacifico', cursive;
     list-style: none;
     position: relative;
     display: block;
+    color: #3b5998;
+    font-weight: bold;
   }
   #page ul li {
-    border: 1px solid rgba(140, 100, 100, .4);
+    border: 2.7px solid rgba(72, 91, 196, 0.4);
     border-right: none;
     border-top: none;
     float: left;
@@ -32,8 +56,8 @@
     text-align: center;
     line-height: 6;
     padding-left: 5px;
-    
   }
+
   #message {
     position: absolute;
     bottom: 0;
@@ -57,6 +81,8 @@
     color: #3b5998;
     text-align:center;
   }
+
+
   /* @media (min-width: 550px) {
    #page {
      width: 50%;
