--- a/style.css
+++ b/style.css
@@ -62,9 +62,11 @@
     color: white;
   }
   input[type=text] {
-    color: rgb(223, 69, 69);
+    color: rgb(3, 3, 3);
     border-radius: 10%;
     width:100px;
+    font-family: 'Share Tech Mono', monospace;
+    font-weight: bold;
     text-align: center;
  }
   .submit {
